<resources>
    <string name="app_name">Appjam_2019</string>

    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="ID">ID</string>
    <string name="PW">Password</string>
    <string name="Nick">Nickname</string>
    <string name="login">Login</string>
    <string name="fashion">fashion</string>
    <string name="board">board</string>
    <string name="closet">closet</string>
    <string name="mypage">mypage</string>
    <string name="title">title</string>
    <string name="age">연령</string>
    <string name="year">연도</string>
    <string name="dialog_year">연도별</string>
    <string name="cancle">취소</string>
    <string name="okay">확인</string>
    <string name="serch">검색</string>
    <string name="cancle">취소</string>
    <string name="hotserch">인기검색어</string>
    <string name="latelyserch">최근검색어</string>


    <string-array name="list_items">
            <item>1970</item>
            <item>1980</item>
            <item>1990</item>
            <item>2000</item>
            <item>2010</item>
            <item>2020</item>
            <item>2999</item>
        </string-array>
</resources>
