<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_1"
        android:icon="@drawable/ic_clothes_selceter"
        android:title="@string/fashion"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_2"
        android:icon="@drawable/ic_baseline_rate_review_24_px_selecter"
        android:title="@string/board"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_3"
        android:icon="@drawable/ic_closet_selecter"
        android:title="@string/closet"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_4"
        android:icon="@drawable/ic_baseline_person_24_px_selecter"
        android:title="@string/mypage"
        app:showAsAction="ifRoom" />
</menu>