<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AuthActivity">

    <ImageView
        android:id="@+id/iv_signUp_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_auth_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn"

        app:layout_constraintTop_toBottomOf="@+id/iv_signUp_logo"
        app:layout_constraintRight_toLeftOf="@+id/tv_auth_signUp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_auth_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"

        app:layout_constraintTop_toTopOf="@+id/tv_auth_signIn"
        app:layout_constraintLeft_toRightOf="@+id/tv_auth_signIn"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/et_auth_inputId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ID"

        app:layout_constraintTop_toBottomOf="@+id/tv_auth_signIn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/et_auth_inputPw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/PW"

        app:layout_constraintTop_toBottomOf="@+id/et_auth_inputId"
        app:layout_constraintLeft_toLeftOf="@+id/et_auth_inputId"
        app:layout_constraintRight_toRightOf="@+id/et_auth_inputId"/>

    <TextView
        android:id="@+id/tv_auth_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"

        app:layout_constraintTop_toBottomOf="@+id/et_auth_inputPw"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>