<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ff3b70"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/title"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:fontFamily="@font/product_sans_regular"
                android:layout_marginTop="9dp"/>

            <EditText
                android:id="@+id/et_main_serch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:hint="Search fashion"
                android:textColorHint="#7A454545"
                android:background="@drawable/bg_toolbar_search"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="9dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:paddingTop="10dp"
                android:paddingBottom="9dp"
                android:paddingStart="8dp"
                android:drawableStart="@drawable/ic_baseline_search"/>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/sv_main_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
        android:background="#f4f4f4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/cl_main_recomended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="38dp">

                <ImageView
                    android:id="@+id/iv_main_recommended"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_clothes_star"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="18dp"/>

                <TextView
                    android:id="@+id/tv_main_recomended"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Recommended fashion"
                    android:textSize="14sp"
                    android:textColor="#454545"
                    android:fontFamily="@font/product_sans_regular"
                    app:layout_constraintTop_toTopOf="@+id/iv_main_recommended"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_main_recommended"
                    app:layout_constraintLeft_toRightOf="@+id/iv_main_recommended"
                    android:layout_marginStart="18dp"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_clothes_recommendedProduct"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_main_recomended"
                    android:paddingStart="16dp"
                    android:layout_marginTop="18dp"/>

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/cl_main_sortproduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TabLayout
                    android:id="@+id/tl_main_tablayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tabIndicatorHeight="0dp">

                    <android.support.design.widget.TabItem
                        android:id="@+id/ti_main_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/ti_main_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year" />
                </android.support.design.widget.TabLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_main_grid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tl_main_tablayout"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:paddingTop="6dp"
                    android:clipToPadding="false"/>
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>